# Guided-Reader

./: .gitignore  LICENSE  README.md  config.d.ts  config.js  css-loader.mjs  eslint.config.ts  global.d.ts  package-lock.json  package.json  server.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1736213776436-64ce1c1199e8b.mjs
client/: package-lock.json  package.json
client/src/: index.css
client/src/routes/: index.module.css  index.tsx
client/src/utils/: const.ts  interactionutils.ts
graphql/operations/gaia/: account.graphql  accounts.graphql  login.graphql  myRoles.graphql  propertySet.graphql  suspendAccount.graphql  unsuspendAccount.graphql
graphql/operations/hades/: addComment.graphql  archiveText.graphql  createAnnotation.graphql  createSource.graphql  createText.graphql  deleteAnnotation.graphql  deleteComment.graphql  discordLogin.graphql  editAnnotation.graphql  listAnnotations.graphql  listComments.graphql  listSources.graphql  listTexts.graphql  locateAnnotation.graphql  locateText.graphql  myVote.graphql  readerAccount.graphql  readerAccounts.graphql  removeVote.graphql  vote.graphql
graphql/operations/icarus/: createPost.graphql  createThread.graphql  deletePost.graphql  listPosts.graphql  locateThread.graphql  removeVote.graphql  threadsFor.graphql  vote.graphql
graphql/schemas/: gaia.graphqls  hades.graphqls  icarus.graphqls  schema.graphqls
messages/: en-GB.json  en.json
messages/login/: en-GB.json  en.json
messages/nav/: en-GB.json  en.json
messages/texts/: en-GB.json  en.json
routes/: index.js
server/: CMakeLists.txt  main.cpp  server.cpp  server.hpp  sslstream.cpp  sslstream.hpp
server/api/: annotation.cpp  api.hpp  discord.cpp  last_modified.cpp  logout.cpp  policy.cpp  profile.cpp  text.cpp  titles.cpp  user.cpp  vote.cpp
server/auth/: email.cpp  email.hpp  httpclient.cpp  httpclient.hpp  session.cpp  session.hpp
server/env/: config.h.in
server/request/: apikey.cpp  apikey.hpp  middleware.cpp  middleware.hpp  postgres.cpp  postgres.hpp  redis.cpp  redis.hpp  request.cpp  request.hpp  request_handler.hpp
src/: entry-client-wrapper.js  entry-client.tsx  entry-server.tsx  global.d.ts  index.css  index.tsx  router.tsx  types.ts  usercontext.tsx  vite-env.d.ts
src/components/: layout.module.css  layout.tsx
src/components/AnnotationItem/: annotationitem.module.css  annotationitem.tsx  annotationitemprops.ts  index.tsx
src/components/AnnotationModal/: annotationmodal.module.css  annotationmodal.tsx  annotationmodalprops.ts  index.tsx
src/components/AnnotationModalHeader/: annotationmodalheader.module.css  annotationmodalheader.tsx  annotationmodalheaderprops.ts  index.tsx
src/components/AudioDisplay/: audio_display.module.css
src/components/ButtonWithAlt/: buttonwithalt.module.css  buttonwithalt.tsx
src/components/CreatingAnnotationModal/: creatingannotationmodal.module.css  creatingannotationmodal.tsx  creatingannotationmodalprops.ts
src/components/EditingAnnotationModal/: editingannotationmodal.module.css  editingannotationmodal.tsx  editingannotationmodalprops.ts
src/components/Header/: header.module.css  header.tsx  headerprops.ts
src/components/HiddenRoutesWrapper/: hiddenrouteswrapper.tsx  index.tsx
src/components/LoginForm/: login_form.module.css  login_form.tsx
src/components/Navbar/: navbar.module.css  navbar.tsx
src/components/PolicyAccept/: index.tsx  policyaccept.tsx
src/components/RegisterForm/: register_form.module.css
src/components/TextDisplay/: index.tsx  textdisplay.module.css  textdisplay.tsx  textdisplayprops.ts
src/components/TextInfo/: index.tsx  textinfo.module.css  textinfo.tsx  textinfoprops.ts
src/components/TextList/: textlist.module.css  textlist.tsx  textlistprops.ts
src/components/TextListItem/: index.tsx  textlistitem.tsx
src/components/Toolbar/: toolbar.module.css  toolbar.tsx  toolbarprops.ts
src/components/discord-avatar/: discord-avatar.module.css  discord-avatar.tsx  index.tsx
src/components/nav/: nav.module.css  nav.tsx
src/components/reader-role-item/: index.tsx  reader-role-item.module.css  reader-role-item.tsx
src/components/user-menu/: user-menu.module.css  user-menu.tsx
src/components/vote-control/: index.tsx  vote-control.module.css  vote-control.tsx
src/routes/: index.module.css  index.tsx
src/routes/admin/: account-detail-page.tsx  (+3 more)
src/server/: context.ts  gaia-mutations.ts  hades-mutations.ts  icarus-mutations.ts
src/utils/: api.ts  auth.ts  cefr.ts  configure-framework.ts  const.ts  dialog-position.ts  global-data.ts  interactionutils.ts  register-loaders.ts  register-mutations.ts  seed-page-data.ts  selection-to-offset.ts  textutils.ts  types.ts  userutils.ts  wrap-range.ts
utils/: ssr.js
(+146 files in other folders)
